# auto_leet_test

./: .gitignore  README.md  main.py  pyproject.toml  throwaway.py
src/pytestleet/: __init__.py  fetch_problems_ids.py  main.py  parse.py  scrape.py
tests/: test_parse.py
tests/integration/: test_integration.py
