[project]
name = "pytestleet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "fbrand-new", email = "francesco.brand94@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "requests>=2.32.3",
]

[project.scripts]
pytestleet = "pytestleet:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
