[project]
name = "pytestleet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "fbrand-new", email = "francesco.brand94@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "gql[all]>=3.5.2",
    "pytest-integration-mark>=0.2.0",
    "pytest>=8.3.5",
    "requests>=2.32.3",
]

[project.scripts]
pytestleet = "pytestleet:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
